--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -23,3 +23,14 @@ $boton:(
     align-items: center;
 }
 
+
+
+//*MIXIN
+
+@mixin flex ($flex, $justify, $align){
+    display: $flex;
+    justify-content: $justify;
+    align-items: $align;
+}
+
+
