--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -18,9 +18,7 @@ main{
     .marcas{
         text-align: center;
         div{
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
+            @include flex (flex, space-evenly, center);
             flex-wrap: wrap;
             margin-top: 35px;
             margin-bottom: 35px;
@@ -54,9 +52,7 @@ main{
             background-color: white;
             color: black;
             text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
+            @include flex (flex, space-around, center);
             flex-wrap: wrap;
             div{
                 width: 270px;
@@ -117,10 +113,8 @@ main{
         .moda-contenedor{
             height: auto;
             div{
-                display: flex;
+                @include flex (flex, space-evenly, center);;
                 flex-direction: column;
-                align-items: center;
-                justify-content: space-evenly;
                 width: 215px;
                 a{
                     width: 215px;
